Moved nalabs core into its own Java project; updated README; removed old unused projects connected to performing metrics using C#